fixing some final layout issues

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -41,6 +41,7 @@ input[type="number"] {
   border-style: solid;
   border-width: 2px;
   border-color: $highlight;
+  width: 100%;
   color: $primary-text;
   outline: none;
   padding: 0.2rem;
@@ -144,6 +145,10 @@ h2 {
 }
 
 // flex utility classes
+.flex {
+  display: flex;
+}
+
 .full {
   flex: 1;
 }
@@ -166,10 +171,6 @@ h2 {
 
 .half {
   flex: 0.5;
-}
-
-.flex {
-  display: flex;
 }
 
 .row {
